# framework.multimedia.alsa-scenario-0.2

./: .gitignore  configure.in
debian/: changelog
packaging/: alsa-scenario.spec
src/: Makefile.am  ascenario.c
